# FinBuddy_

./: .gitignore  .replit  README.md  affordability_calculator.py  app.py  budget_planner.py  finance_tips.py  financial_health.py  finbuddy_chat.py  gamification.py  investment_education.py  loading_animations_demo.html  loading_screen_demo.py  package-lock.json  package.json  pyproject.toml  replit.nix  savings_coach.py  utils.py
