[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.3.20",
    "langchain>=0.3.21",
    "langchain-openai>=0.3.11",
    "numpy>=2.2.4",
    "openai>=1.69.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "python-dateutil>=2.9.0.post0",
    "streamlit>=1.44.0",
    "twilio>=9.5.1",
]
